Update for schemaVersion 6 and the interface document.
